--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
-}
-
-body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
